PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Expense Application</label>
    <nameField>
        <displayFormat>EP-{YYYYMM}-{000000}</displayFormat>
        <label>경비신청 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>