PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>예산</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Expense Application</relationshipLabel>
    <relationshipName>Expense_Application</relationshipName>
    <type>Lookup</type>
</CustomField>