PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <label>사용목적</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BudgetType</valueSetName>
    </valueSet>
</CustomField>