PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/ExpenseCriteria__c.field-meta.xml
<CustomField>
    <fullName>ExpenseCriteria__c</fullName>
    <label>경비신청 기준</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>