PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/FirstExpenseRequest__c.field-meta.xml
<CustomField>
    <fullName>FirstExpenseRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>일반 사원일 경우 &apos;사업부장/PM&apos;선택 &amp;&amp;
사업부장/PM일 경우 &apos;이응도 전무님&apos;선택</inlineHelpText>
    <label>1차 승인자 지정</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FirstExpenseRequest</relationshipName>
    <type>Lookup</type>
</CustomField>