PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/fm_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>fm_YearMonth__c</fullName>
    <formula>TEXT(UseYear__c)&amp;&apos;. &apos;&amp;  right(&apos;0&apos; &amp; Text(UseMonth__c),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사용년월</label>
    <type>Text</type>
</CustomField>