PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/OldName__c.field-meta.xml
<CustomField>
    <fullName>OldName__c</fullName>
    <label>OldName</label>
    <type>TextArea</type>
</CustomField>