PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/OwnerActive__c.field-meta.xml
<CustomField>
    <fullName>OwnerActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사용자 활성 여부</label>
    <type>Checkbox</type>
</CustomField>