PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>결제방식</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>개인카드/현금</fullName>
                <default>true</default>
                <label>개인카드/현금</label>
            </value>
            <value>
                <fullName>법인카드</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>