PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/SecondApproverRequest__c.field-meta.xml
<CustomField>
    <fullName>SecondApproverRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>1차 승인자에 따라 자동으로 할당</inlineHelpText>
    <label>2차 승인자 지정</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondApproverRequest</relationshipName>
    <type>Lookup</type>
</CustomField>