PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>기안일자</label>
    <type>Date</type>
</CustomField>