PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>상신금액합계</label>
    <summarizedField>ExpenseDetail__c.Amount__c</summarizedField>
    <summaryForeignKey>ExpenseDetail__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>