PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>경비 구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>개인경비</fullName>
                <default>true</default>
                <label>개인경비</label>
            </value>
            <value>
                <fullName>법인카드</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>