PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/fields/UseYear__c.field-meta.xml
<CustomField>
    <fullName>UseYear__c</fullName>
    <defaultValue>TEXT( YEAR(  ADDMONTHS(TODAY(),-1)  ) )</defaultValue>
    <inlineHelpText>신청할 경비내역의 연도를 입력합니다.</inlineHelpText>
    <label>경비 사용 연도</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
                <default>true</default>
                <label>2022</label>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>