PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/validationRules/Stage_Closed_Not_Change_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Closed_Not_Change_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(ApprovalStatus__c, &apos;승인완료&apos;) 
&amp;&amp; 
ISCHANGED(Submit_Date__c)</errorConditionFormula>
    <errorMessage>승인완료 후 기안일자 변경불가</errorMessage>
</ValidationRule>