PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>UseMonth__c</columns>
    <columns>UseYear__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UseMonth__c</field>
        <operation>equals</operation>
        <value>12</value>
    </filters>
    <label>2013.12</label>
</ListView>