PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>fm_YearMonth__c</columns>
    <columns>BudgetType__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>