PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/Mine.listView-meta.xml
<ListView>
    <fullName>Mine</fullName>
    <columns>NAME</columns>
    <columns>UseYear__c</columns>
    <columns>UseMonth__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Mine</label>
</ListView>