PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/Thismonth.listView-meta.xml
<ListView>
    <fullName>Thismonth</fullName>
    <columns>NAME</columns>
    <columns>fm_YearMonth__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>이번달 경비신청 현황</label>
</ListView>