PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/View201407.listView-meta.xml
<ListView>
    <fullName>View201407</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>UseYear__c</columns>
    <columns>UseMonth__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>