PA_Education/TestMenifest/force-app/main/default/objects/Expense__c/listViews/X2014_02.listView-meta.xml
<ListView>
    <fullName>X2014_02</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>UseYear__c</columns>
    <columns>UseMonth__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UseMonth__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>2014.02</label>
</ListView>